# Lazygit

./: .gitignore  .replit  README.md  config.json  main.py  menu.py  pyproject.toml  replit.md
actions/: git.py
gittui/: __init__.py
gittui/config/: __init__.py  schema.py
gittui/core/: __init__.py  events.py
gittui/git/: __init__.py
gittui/plugins/: __init__.py
gittui/ui/: __init__.py
gittui/ui/panels/: __init__.py
utils/: ui.py
