[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gittui"
version = "1.0.0"
description = "A fast, colorful terminal UI for Git operations - like lazygit but customizable"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GitTUI Team"}
]
keywords = ["git", "tui", "terminal", "curses", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gittui = "gittui.cli:main"

[project.urls]
Homepage = "https://github.com/gittui/gittui"
Documentation = "https://github.com/gittui/gittui#readme"
Repository = "https://github.com/gittui/gittui"

[tool.setuptools.packages.find]
where = ["."]
include = ["gittui*"]

[tool.setuptools.package-data]
gittui = ["*.yaml", "config/*.yaml"]
